compiler/tests-spec/testData/psi/linked/expressions/constant-literals/the-types-for-integer-literals/p-1/pos/1.10.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, the-types-for-integer-literals -> paragraph 1 -> sentence 1
 * NUMBER: 10
 * DESCRIPTION: Long literal mark in not allowed places (it's considered as identifiers).
 */

konst konstue = l1234
konst konstue = L0xA0Al
konst konstue = _l
konst konstue = _L
